Fixed loading issue with course search; fixed text-wrap on calendar css

--- a/client/src/components/calendar/Calendar.css
+++ b/client/src/components/calendar/Calendar.css
@@ -29,6 +29,9 @@
     font: Medium 16px/15px Avenir Next;
     letter-spacing: 0px;
     opacity: 1;
+
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .courseEventBar {
